# pyjsonapi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
pyjsonapi/: __init__.py  model.py  relationship.py  session.py
src/pyjsonapi/: __init__.py  relationship.py  session.py  utils.py
