[tool.poetry]
name = "jsonapi-python"
version = "0.1.1.post2"
description = "Python JSON:API implementation"
authors = ["david-why <david_why@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/david-why/pyjsonapi"

packages = [
    { include = "pyjsonapi", from = "src" }
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.urls]
Issues = "https://github.com/david-why/pyjsonapi/issues"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.9.3"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
